# xecai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: calculator_agent_example.py  chat_example.py  embedding_example.py  reranker_example.py  retry_example.py  simple_rag.py  websearch_agent_example.py
src/xecai/: models.py
src/xecai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/xecai/agents/: __init__.py  agent_interface.py
src/xecai/agents/implementations/: __init__.py  anthropic_agent.py  google_agent.py  openai_agent.py
src/xecai/chat/: chat_interface.py
src/xecai/chat/implementations/: anthropic_chat.py  aws_chat.py  google_chat.py  openai_chat.py
src/xecai/embeddings/: embedding_interface.py
src/xecai/embeddings/implementations/: aws_embedding.py  google_embedding.py  openai_embedding.py
src/xecai/error_handlers/: anthropic_error_handler.py  aws_error_handler.py  google_error_handler.py  openai_error_handler.py
src/xecai/memory/: memory_interface.py
src/xecai/memory/implementations/: debug_memory.py  postgresql_memory.py  redis_memory.py
src/xecai/reranker/: reranker_interface.py
src/xecai/reranker/implementations/: aws_reranker.py
src/xecai/utils/: condenser.py  rag_prompt.py  summarizer.py  trim_conversation.py
src/xecai/vector_db/: vector_db_interface.py
src/xecai/vector_db/implementations/: debug_vector_db.py  pinecone_vector_db.py  postgresql_vector_db.py
tests/: test_models.py  test_utils.py
